# Ushadow

./: .env.default  .gitignore  Makefile  README.md  SERVICES_ARCHITECTURE.md  claude.md  clear.sh  design-v2-migration-guide.md  dev.sh  docker-compose.infra.yml  docker-compose.tailscale.yml  docker-compose.yml  go.sh  package-lock.json  package.json  quick-start.sh  quickstart.sh  start-dev.sh  ush  wizards.md
.github/workflows/: launcher-release.yml
compose/: CHRONICLE_README.md  backend-with-tailscale.yml  backend.yml  chronicle-compose.yaml  docker-compose.infra.yml  frontend.yml  metamcp-compose.yaml  openmemory-compose.yaml  parakeet-compose.yml  speaker-recognition-compose.yaml
compose/overrides/: dev-webui.yml  prod-webui.yml
config/: .gitignore  capabilities.yaml  chronicle-webui.env  chronicle.env  config.defaults.yaml  default-services.yaml  default-services.yaml.OLD  feature_flags.yaml  openmemory-ui.env  secrets.yaml.example  service-defaults.yaml  service-templates.yaml  tailscale-serve.json
config/kubeconfigs/: a6beea245367f04b.yaml
config/providers/: llm.yaml  memory.yaml  transcription.yaml
config/services/: chronicle-webui.yaml  chronicle.yaml  openmemory-ui.yaml  openmemory.yaml
design/: ColorSystemPreview.tsx
docs/: feature-flags-quickstart.md  network_troubleshooting.md  tailscale_architecture.md
scripts/: bootstrap.ps1  bootstrap.sh  generate-caddyfile.sh  server-install.ps1  server-install.sh  unode-bootstrap.ps1  ushadow_client.py
setup/: reset-tailscale.sh  run.py  setup_utils.py  start_utils.py
ui-clone/: docs.css  docs.html  index.html  style.css
ushadow/: ADDING_SERVICES.md
ushadow/backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
ushadow/backend/src/: ARCHITECTURE.md
ushadow/backend/src/api/: feature_flags.py
ushadow/backend/src/config/: __init__.py  infra_settings.py  omegaconf_settings.py  secret_store.py  secrets.py  secrets_loader.py  settings.py  yaml_parser.py
ushadow/backend/src/config copy/: config_parser.py  config_schema.py  secrets_schema.py
ushadow/backend/src/middleware/: app_middleware.py
ushadow/backend/src/models/: __init__.py  deployment.py  kubernetes.py  memory.py  provider.py  service.py  settings_schemas.py  unode.py  user.py
ushadow/backend/src/routers/: auth.py  chat.py  chronicle.py  compose_services.py  deployments.py  docker.py  docker_events.py  feature_flags.py  kubernetes.py  providers.py  services.py  settings.py  tailscale.py  unodes.py  wizard.py
ushadow/backend/src/services/: auth.py  auth_dependencies.py  auth_service.py  capability_resolver.py  compose_registry.py  config_service.py  deployment_manager.py  docker_manager.py  feature_flags.py  kubernetes_manager.py  llm_client.py  omegaconf_settings.py  provider_registry.py  service_orchestrator.py  service_registry.py  tailscale_serve.py  tailscale_serve_config.py  unode_manager.py
ushadow/backend/src/utils/: __init__.py  yaml_parser.py
ushadow/backend/tests/: test_infra_settings.py  test_omegaconf_settings.py  test_secrets.py  test_yaml_parser.py
ushadow/frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
ushadow/launcher/: Makefile  README.md  RELEASING.md  TESTING.md  package-lock.json  package.json  test-scenarios.sh
ushadow/launcher/src-tauri/: Cargo.toml  tauri.conf.json
ushadow/launcher/src-tauri/icons/: icon.icns
ushadow/launcher/src-tauri/src/: main.rs  models.rs
ushadow/launcher/src-tauri/src/commands/: discovery.rs  docker.rs  installer.rs  mod.rs  prerequisites.rs  utils.rs
ushadow/manager/: VERSIONING.md  manager.py
(+163 files in other folders)
