[project]
name = "ushadow-backend"
version = "0.1.0"
description = "ushadow - AI Orchestration Platform Backend"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # HTTP Client for Chronicle/MCP/Agent Zero
    "httpx>=0.27.2",
    "aiohttp>=3.11.7",

    # MCP Server for LLM tool access
    "mcp>=1.1.0",

    # Database Clients
    "pymongo>=4.9.0,<4.10",  # Motor 3.6.0 requires pymongo<4.10
    "motor>=3.6.0",
    "redis>=5.2.0",

    # Authentication & Security
    "fastapi-users[beanie]>=14.0.1",
    "beanie>=1.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "bcrypt>=4.2.1",
    "pyjwt>=2.10.1",

    # CORS & Middleware
    "fastapi-cors>=0.0.6",

    # Utilities
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "docker>=7.1.0",
    "sse-starlette>=2.1.3",
    "qrcode[pil]>=8.0",
    "kubernetes>=31.0.0",

    # Logging & Monitoring
    "structlog>=24.4.0",

    # YAML parsing
    "ruamel.yaml>=0.18.6",

    # Configuration Management
    "omegaconf>=2.3.0",

    # LLM Integration
    "litellm>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
